--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Build app
         uses: actions/checkout@v4
         with:
-          ref: deploy
+          ref: master
       - uses: actions/setup-node@v4
         with:
           node-version: 18
