--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,5 +15,6 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: package-lock.json
       - run: npm ci
       - run: npm run build
