--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,5 @@ jobs:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: package-lock.json
-      - run: npm ci
+      - run: npm i
       - run: npm run build
