--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,9 @@ name: Build and Deploy to Netlify
 on:
   push:
     branches:
-      - master
+      - feature
+    paths-ignore:
+      - '.github/workflows/*'
 jobs:
   build-deploy:
     runs-on: ubuntu-22.04
@@ -10,7 +12,7 @@ jobs:
       - name: Build app
         uses: actions/checkout@v4
         with:
-          ref: master
+          ref: feature
       - uses: actions/setup-node@v4
         with:
           node-version: 18
